# Repository-1-AP

./: API-tests.py  CLAUDE.md  DAy_04_tests.py  Day_04_main.py  LICENSE  README.md  day-03-homework.md  day-04-hometests.py  day_04_test.py  frontend.py  main.py  main_tag_3.py  notes.db  pyproject.toml  test_main.py  test_suit.py  work-log.md
.claude/: settings.local.json
Exploration/: class_based_decorator.py  test_main.py  test_suit.py  test_validation.py
data/: notes.db  notes.json
